css code changes in doc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -968,9 +968,9 @@
                                <ol>
                                  <li><span class="numbers">1.</span><strong> File Tab:</strong></li>
                                  <li>The File bar displays Actions.The options in the drop-down menu are Exit, Save and Save As.</li>
-                                 <li><stong> Exit:</strong> Exit is used to close the Techforce RPA Studio.</li>
-                                 <li><stong> Save:</strong> It is used to save an RPA task with a name. The shortcut is Ctrl+S.</li>
-                                 <li><stong> Save As:</strong> It is used to save an already saved document with a new name. The shortcut is Ctrl+Shift+S</li>
+                                 <li><strong> Exit:</strong> Exit is used to close the Techforce RPA Studio.</li>
+                                 <li><strong> Save:</strong> It is used to save an RPA task with a name. The shortcut is Ctrl+S.</li>
+                                 <li><strong> Save As:</strong> It is used to save an already saved document with a new name. The shortcut is Ctrl+Shift+S</li>
                                  <img src="{{ '/assets/images/doc-img18.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                                  <p><span class="numbers">Figure 3: </span>   File Tab</p>
                                  <li><span class="numbers">2.</span><strong> Help Tab:</strong></li>
@@ -978,38 +978,38 @@
                                </ol>
                           </div>
                           <div id="New"  class="page-section">
-                            <h4 class="purple">3.3.1 New</h4>
+                            <h5>3.3.1 New</h5>
                             <p>Used to create a new RPA action flows into the respected folder. The user can start a new project from predefined templates.</p>
                             <img src="{{ '/assets/images/doc-img19.png' | relative_url }}" alt="image" style="width:100px;border:1px solid green;text-align:center;margin-top:10px;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 5: </span> Studio New</p>
                           </div>
                           <div id="Open"  class="page-section">
-                            <h4 class="pink">3.3.2 Open</h4>
+                            <h5 class="pink">3.3.2 Open</h5>
                             <p>Used to open the existing flow file. Open a project the user worked on recently. By default, projects are created in C:\Users\\Documents\Techforce-IDE.The Open project dialog searches for project. Json files.</p>
                             <img src="{{ '/assets/images/doc-img20.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 6: </span>  Open</p>
                           </div>
                           <div id="Save"  class="page-section">
-                            <h4 class="purple">3.3.3 Save</h4>
+                            <h5 class="purple">3.3.3 Save</h5>
                             <p>Used to save the created action flow or Modified flow. It is used to save an RPA flow with a name. Shortcut is Ctrl+S</p>
                             <img src="{{ '/assets/images/doc-img21.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 7: </span>  Save</p>
                           </div>
                           <div id="Record"  class="page-section">
-                            <h4 class="gray">3.3.4 Record</h4>
+                            <h5 class="gray">3.3.4 Record</h5>
                             <p>Used to record the WEB operations, simply called a Web-Recorder to automate the browser functionalities.</p>
                             <p>Techforce RPA Web Automation uses a built-in recorder that can read and enact web-based activities. It identifies web elements by their attributes and accurately manipulates them while keeping up with website changes.</p>
                             <img src="{{ '/assets/images/doc-img22.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 8: </span> Record</p>
                           </div>
                           <div id="Clear"  class="page-section">
-                            <h4 class="violet">3.3.5 Clear</h4>
+                            <h5 class="violet">3.3.5 Clear</h5>
                             <p>Used to close the opened action flow. That means to clear any task (which the user may want to clear or close).</p>
                             <img src="{{ '/assets/images/doc-img23.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 9: </span>  clear</p>
                           </div>
                           <div id="Publish"  class="page-section">
-                            <h4 class="purple">3.3.6 Publish</h4>
+                            <h5 class="purple">3.3.6 Publish</h5>
                             <p>Used to publish the developed action flow using the required user credentials and IP.</p>
                             <ol>
                             <img src="{{ '/assets/images/doc-img24.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
@@ -1019,7 +1019,7 @@
                           </ol>
                           </div>
                           <div id="Settings"  class="page-section">
-                            <h4 class="green">3.3.7 Settings</h4>
+                            <h5 class="green">3.3.7 Settings</h5>
                             <p>Used to set the global wait time of the flow and basic Chrome dimensions.</p>
                             <img src="{{ '/assets/images/doc-img26.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 12: </span> Settings</p>
@@ -1028,13 +1028,13 @@
                             <p><span class="numbers">Figure 13: </span>  Global settings</p>
                           </div>
                           <div id="Stop"  class="page-section">
-                            <h4 class="skyblue">3.3.8 Stop</h4>
+                            <h5 class="skyblue">3.3.8 Stop</h5>
                             <p>Used to stop the execution of flow while it is running.</p>
                             <img src="{{ '/assets/images/doc-img28.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 14: </span>  Stop</p>
                           </div>
                           <div id="Play"  class="page-section">
-                            <h4 class="purple">3.3.9 Play</h4>
+                            <h5 class="purple">3.3.9 Play</h5>
                             <p>Used to run the flow to start the execution.</p>
                             <img src="{{ '/assets/images/doc-img29.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 15: </span>  Play</p>
@@ -1048,7 +1048,7 @@
                             <h4 class="purple">3.4 Action Library Panel</h4>
 
                             <p>All the actions in the Action library panel are categorized based on the functionality.</p>
-                            <li>List of action categories in Techforce RPA Studio:</li>
+                            <p>List of action categories in Techforce RPA Studio:</p>
                             <li>Stage</li>
                             <li>Desktop Automation</li>
                             <li>Web Automation</li>
@@ -1069,29 +1069,29 @@
                             <img src="{{ '/assets/images/doc-img33.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 19: </span> Techforce RPA Studio Desktop Automation</p>
 
-                            <li>3.4.2 Web Automation</li>
+                            <li>Web Automation</li>
                             <p>Web Automation is used to automate the browser applications like Chrome, Firefox and Internet Explorer, etc., using the Sub-Actions like Open Webpage, Read Table, Frame, Popup, Show, Snap, Dom, Scroll and Back.</p>
                             <img src="{{ '/assets/images/doc-img34.png' | relative_url }}" alt="image" style="width:200px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 20: </span> Techforce RPA Studio Web Automation</p>
 
-                            <h4 class="purple">3.4.2 General</h4>
+                            <li> General</li>
                             <p>General Action is used to automate normal desktop-based and web-based operations using Sub-Actions.</p>
                             <p>The Sub-Actions like Mouse Clicks, Conditions, Excel, Loops, Jump Statements, OCR, Exceptional Handling, Files and Folders, Secure FTP, CSV, Stop, Message Box, Clipboard, Assign, Ask, HTTP API, Wait, Read, Get Credentials, Get Secret, Echo, Enter Keystrokes, Read and Module are used in General Action.</p>
                             <img src="{{ '/assets/images/doc-img35.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <img src="{{ '/assets/images/doc-img36.png' | relative_url }}" alt="image" style="width:200px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 21: </span> Techforce RPA Studio General</p>
 
-                            <h4 class="purple">3.4.2 Programming</h4>
+                            <li> Programming</li>
                             <p>Programming Action comprises String and Technology Sub-Actions. Using String Sub-Action, the user can perform string operations and match case operations. By using Programming Sub-Action, the user can include programming languages like JavaScript, Python, R and Auto Hotkey scripting, available to automate.</p>
                             <img src="{{ '/assets/images/doc-img37.png' | relative_url }}" alt="image" style=" width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 23: </span> Techforce RPA Studio File Tab</p>
 
-                            <h4 class="purple">3.4.2 Mail Integration</h4>
+                            <li> Mail Integration</li>
                             <p>Mail Integration is used to automate mail operations to configure Read Mail, Send Mail and Save Attachments using Sub-Actions: IMAP, POP3, OutLook2016 and Save Attachments.</p>
                             <img src="{{ '/assets/images/doc-img38.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 24: </span> Techforce RPA Studio Mail Integration</p>
 
-                            <h4 class="purple">3.4.2 Database</h4>
+                            <li> Database</li>
                             <p>The Database is used to connect to the database like MYSQL and PostgreSQL. The data from can be retrieved and stored into desktop applications. Similarly, the data can be sent to the database from the desktop applications. All the queries executed in the database can be executed using database actions.</p>
                             <li><span>Execute Query: </span>Executes the database query on the connected database.</li>
                             <img src="{{ '/assets/images/doc-img39.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
@@ -2332,7 +2332,11 @@
                         </div>
 
 
-
+                        <div id="Organization"  class="page-section">
+                          <h3><span class="numbers">4.8</span>Organization</h3>
+                          <p>Only the admin will have access to create an organization. To create an organization, navigate to Account Management and from the Account Management drop-down, select the ORGANIZATION tab. On the Organization screen, click on the “ADD” button to create a new organization.</p>
+                          <img src="{{ '/assets/images/doc-img102.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                        </div>
 
 
 
