--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -861,9 +861,11 @@
                              <li><span class="numbers">2.</span>Right-click on the installer and select “Run as administrator” so that RPA studio will have “Admin” privileges</li>
                              <p>The following image is an example of how to run as administrator.</p>
                              <img src="{{ '/assets/images/doc-img1.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <p style="text-align:center;"><strong>Figure: </strong>  Installation1</p>
                              <li><span class="numbers">3.</span>Windows will ask for permission stating “Do you want to allow the unknown publisher to install the application”. Click YES, and the installation process will start.</li>
                              <li><span class="numbers">4.</span>Accept the license agreement of Techforce.ai to proceed for the further installation process.</li>
                              <img src="{{ '/assets/images/doc-img2.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <p style="text-align:center;"><strong>Figure: </strong>  Installation1</p>
                              <p>The installation process will show the folder selection screen.</p>
                              <li><span class="numbers">5.</span>Click on BROWSE and select a folder which does not contain a space in its name like shown in the image.</li>
                              <img src="{{ '/assets/images/doc-img3.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
