css changes in doc to sai

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -861,19 +861,22 @@
                              <li><span class="numbers">2.</span>Right-click on the installer and select “Run as administrator” so that RPA studio will have “Admin” privileges</li>
                              <p>The following image is an example of how to run as administrator.</p>
                              <img src="{{ '/assets/images/doc-img1.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                               <p style="text-align:center;"><strong>Figure: </strong>  Installation1</p>
+                               <p style="text-align:center;"><strong>Figure: Installation1 </strong></p>
                              <li><span class="numbers">3.</span>Windows will ask for permission stating “Do you want to allow the unknown publisher to install the application”. Click YES, and the installation process will start.</li>
                              <li><span class="numbers">4.</span>Accept the license agreement of Techforce.ai to proceed for the further installation process.</li>
                              <img src="{{ '/assets/images/doc-img2.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                              <p style="text-align:center;"><strong>Figure: </strong>  Installation1</p>
+                              <p style="text-align:center;"><strong>Figure: Installation2 </strong></p>
                              <p>The installation process will show the folder selection screen.</p>
                              <li><span class="numbers">5.</span>Click on BROWSE and select a folder which does not contain a space in its name like shown in the image.</li>
                              <img src="{{ '/assets/images/doc-img3.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <p style="text-align:center;"><strong>Figure: Installation3</strong></p>
                              <li><span class="numbers">6.</span>After selecting the folder, click on “INSTALL” which will start installing RPA studio.</li>
                              <img src="{{ '/assets/images/doc-img4.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <p style="text-align:center;"><strong>Figure: Installation4</strong></p>
                              <p>TIP: On the folder selection screen, make sure to select a folder, which does not contain any space in the folder name. If the selected folder contains any space in its name, then the RPA scripts built using the studio cannot be executed.</p>
                              <li><span class="numbers">7.</span>The installation will take a bit time, and after installing the Studio, click on CLOSE button to proceed for further process</li>
                              <img src="{{ '/assets/images/doc-img5.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <p style="text-align:center;"><strong>Figure: Installation5</strong></p>
                              </ol>
 
 
@@ -884,22 +887,26 @@
                             <ol>
                             <li><span class="numbers">1.</span>In the first screen of Techforce OCR installation, select preferred language, and click “OK” which will start the installation of Techforce OCR.</li>
                              <img src="{{ '/assets/images/doc-img6.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;" >
+                              <p style="text-align:center;"><strong>Figure: Installing Techforce OCR1</strong></p>
                             <li><span class="numbers">2.</span>In the next screen of OCR installation, click NEXT to continue the installation process.</li>
 
                             <li><span class="numbers">3.</span>Accept the license agreement of Techforce OCR to continue the installation process.</li>
                             <img src="{{ '/assets/images/doc-img7.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <p style="text-align:center;"><strong>Figure:  Installing Techforce OCR2</strong></p>
                             <li><span class="numbers">4.</span>After accepting the agreement, specify/select who should have the user level access to OCR Select appropriately from.</li>
                             <p>“Install for anyone using this computer or Install just for me”.</p>
                             <img src="{{ '/assets/images/doc-img8.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-
+                              <p style="text-align:center;"><strong>Figure:  Installing Techforce OCR3 </strong></p>
                             <li><span class="numbers">5.</span>Select any one of the options and click on NEXT button. In the next screen choose the components that are to be installed or else just click on NEXT to continue the installation process.</li>
                             <img src="{{ '/assets/images/doc-img9.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                            <li><span class="numbers">6.</span>After selecting the components, the installation process will show the folder path selection. Keep the default storage space or else specify the installation folder.</li>
+                             <p style="text-align:center;"><strong>Figure:  Installing Techforce OCR4 </strong></p>
+                             <li><span class="numbers">6.</span>After selecting the components, the installation process will show the folder path selection. Keep the default storage space or else specify the installation folder.</li>
                             <img src="{{ '/assets/images/doc-img10.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-
+                             <p style="text-align:center;"><strong>Figure:  Installing Techforce OCR5 </strong></p>
                             <li><span class="numbers">7.</span>Select the options for start menu action and then click on Install to.</li>
                             <li><span class="numbers">8.</span>After installation, click on NEXT button and then click on FINISH button to complete the RPA Studio installation</li>
                             <img src="{{ '/assets/images/doc-img11.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <p style="text-align:center;"><strong>Figure:  Installing Techforce OCR6 </strong></p>
                             </ol>
 
 
@@ -910,13 +917,16 @@
                            <p>To uninstall the techforce.ai studio, go to the Control Panel and click on Uninstall a program.</p>
 
                            <img src="{{ '/assets/images/doc-img12.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <p style="text-align:center;"><strong>Figure:  Un-install Instructions1 </strong></p>
                            <p>Now, select Techforce.ai studio, right-click on it and click on UNINSTALL.</p>
                            <img src="{{ '/assets/images/doc-img13.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <p style="text-align:center;"><strong>Figure:  Un-install Instructions2 </strong></p>
                            <p>Now, the Techforce.ai studio will ask for permissions to uninstall; click on YES.</p>
                            <p>The uninstall process will start, and it will take some time to uninstall.</p>
                            <p>After the process is completed, click on CLOSE.</p>
                            <p>You also need to uninstall the dependencies, so go back to the control panel, Select the Techforce.ai OCR engine, right-click and click on UNINSTALL.</p>
                            <img src="{{ '/assets/images/doc-img14.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <p style="text-align:center;"><strong>Figure:  Un-install Instructions3 </strong></p>
                            <p>A pop up will open  and ask for permission to uninstall the Tecforce.ai OCR.</p>
                            <p>Click on YES, and another pop up will open to select the language.</p>
                            <p>Click on OK, and the uninstall process will start.</p>
@@ -924,8 +934,10 @@
                            <p>Now, check the folder where Techforce.ai studio was installed. Sometimes some of the files might not be deleted..</p>
                            <p>In such cases, go to Task Manager, and under the Processes tab, search for the “Electron” process.</p>
                             <img src="{{ '/assets/images/doc-img15.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <p style="text-align:center;"><strong>Figure:  Un-install Instructions4 </strong></p>
                            <p>Select the process and click on the END TASK.</p>
                             <img src="{{ '/assets/images/doc-img16.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <p style="text-align:center;"><strong>Figure:  Un-install Instructions5 </strong></p>
                            <p>Now, go back to the folder path and delete the files. Now, all the files will be deleted.</p>
                          </div>
 
@@ -937,28 +949,37 @@
                              <li><span class="numbers">	Step 1: </span>  Create a new flow by clicking on the New Icon. A new flow will be displayed.</li>
                              <li><span class="numbers">	Step 2: </span> Click on the Open web page and drag it into the flow, where a new property window will pop up.</li>
                              <img src="{{ '/assets/images/doc-img93.png' | relative_url }}" alt="image" style="width:500px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <p style="text-align:center;"><strong>Figure:  Open web page </strong></p>
                              <p> Select Google Chrome and pass the URL of the website in the <strong>“Page Address”: https://www.amazon.in/</strong></p>
                               <li><span class="numbers">	Step 3: </span> Now, drag and drop the <strong>“wait”</strong> action into the flow.</li>
                              <img src="{{ '/assets/images/doc-img94.png' | relative_url }}" alt="image" style="width:500px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <p style="text-align:center;"><strong>Figure: Wait </strong></p>
                               <p>Pass “5 sec” in the Time in sec. Here 5 seconds wait time is given to load the webpage.</p>
                               <li><span class="numbers">	Step 4: </span>Drag and drop the <strong>“Enter Keystrokes”</strong> action into the flow.</li>
                               <p>Capture the XPath of the HTML that needs to be written in the webpage and pass that XPath in the XPath.</p>
                              <img src="{{ '/assets/images/doc-img95.png' | relative_url }}" alt="image" style="width:500px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                                <p style="text-align:center;"><strong>Figure: Enter Keystrokes </strong></p>
                               <p>Create a variable in the variable window and set iPhone as the value pass that variable into the Text.</p>
                               <li><span class="numbers">	Step 5: </span> Drag and drop the <strong>click</strong> action  into the flow.</li>
                              <img src="{{ '/assets/images/doc-img96.png' | relative_url }}" alt="image" style="width:500px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <p style="text-align:center;"><strong>Figure: Click </strong></p>
                               <p>Select the HTML selector and pass the XPath of the search button in the Selector</p>
                               <li><span class="numbers">	Step 6: </span> Drag and drop the wait stage and give 5 seconds like in <strong>“step 3”</strong>.</li>
                              <img src="{{ '/assets/images/doc-img97.png' | relative_url }}" alt="image" style="width:500px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                                 <p style="text-align:center;"><strong>Figure: Wait</strong></p>
                                <li><span class="numbers">	Step 7: </span>Drag and drop the read action into the flow.</li>
                              <img src="{{ '/assets/images/doc-img98.png' | relative_url }}" alt="image" style="width:500px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                                 <p style="text-align:center;"><strong>Figure: Read </strong></p>
                                <p>Pass the XPath of which you want to read into the HTML element and create a variable in the variable window and pass the variable name in the Read to variable.</p>
                              <img src="{{ '/assets/images/doc-img99.png' | relative_url }}" alt="image" style="width:500px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <p style="text-align:center;"><strong>Figure: Read to Variable </strong></p>
                                <li><span class="numbers">	Step 8: </span> Drag and drop the echo action  into the flow.</li>
                              <img src="{{ '/assets/images/doc-img100.png' | relative_url }}" alt="image" style="width:500px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <p style="text-align:center;"><strong>Figure: Echo </strong></p>
                               <p>Pass the variable name created to store the read value from the webpage in the Write your custom Variable.</p>
                               <p>Echo will show the results in the logs.</p>
                              <img src="{{ '/assets/images/doc-img101.png' | relative_url }}" alt="image" style="width:500px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                                <p style="text-align:center;"><strong>Figure: Logs </strong></p>
                               <li><span class="numbers">	Step 9: </span> Now save the flow by clicking Save and run the flow by clicking the Play button in the menu bar.</li>
                           </div>
 
